adds animation to interest and hobbies buttons, makes footer and navigation importable for other pages

--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -10,27 +10,7 @@ html
         link(href="../fontawesome/css/solid.css" rel="stylesheet")
         link(rel="stylesheet", type="text/css", href="/css/index.css")
     body
-        header(id="home")
-            nav
-                div(class="nav-inner")
-                    a(id="nav-profile" class="nav-button" href="/#profile")
-                        i(class="fas fa-user-alt")
-                        span contact
-                    a(id="nav-education" class="nav-button" href="/#education")
-                        i(class="fas fa-graduation-cap")
-                        span education
-                    a(id="nav-experiences" class="nav-button" href="/#experiences")
-                        i(class="fas fa-briefcase")
-                        span experiences
-                    a(id="nav-abilities" class="nav-button" href="/#abilities")
-                        i(class="fas fa-dumbbell")
-                        span abilities
-                    a(id="nav-projects" class="nav-button" href="/#projects")
-                        i(class="fas fa-hammer")
-                        span projects
-                    a(id="nav-contact" class="nav-button" href="/#contact")
-                        i(class="fas fa-envelope-open-text")
-                        span contact
+        include includes/navigation
         div(class="content-container")
             section(id="profile" class="central-section")
                 div(class="section-header big-header has-shadow")
@@ -82,8 +62,6 @@ html
                                             span animals
                                     div(class="hobbies-row")
                                         // Filler divs to force color scheme.
-                                        div(class="fully-hidden")
-                                        div(class="fully-hidden")
                                         div(class="hobby-icon")
                                             i(class="fas fa-plane")
                                             span travelling
@@ -162,10 +140,7 @@ html
                             div(class="row-1")
                                 input(id="form-input-submit" type="submit", value="Go!")
                     div(class="shadow")
-        footer
-            div(class="footer-inner")
-                span(class="footer-tag") Working through day and night to finalize any idea.
-                span(class="copyright-tag") © Copyright #{new Date().getFullYear()} <br> Colin Geukes
+        include includes/footer
         script(type="text/javascript", src="/js/skill.js")
         script(type="text/javascript", src="/js/projectCard.js")
         script(type="text/javascript", src="/js/education.js")
