--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -158,6 +158,38 @@ $hobby-bracket: 150px;
     text-align: center;
     padding: 0 75px;
 
+    &:nth-child(1) {
+      > :nth-child(1) {
+        animation: 0.8s fall-in ease-in-out forwards;
+      }
+
+      > :nth-child(2) {
+        animation: 0.8s fall-in 0.2s ease-in-out forwards;
+      }
+
+      > :nth-child(3) {
+        animation: 0.9s fall-in-large ease-in-out forwards;
+      }
+
+      > :nth-child(4) {
+        animation: 0.8s fall-in 0.1s ease-in-out forwards;
+      }
+    }
+
+    &:nth-child(2) {
+      > :nth-child(1) {
+        animation: 0.9s fall-in-large 0.1s ease-in-out forwards;
+      }
+
+      > :nth-child(2) {
+        animation: 0.7s fall-in 0.25s ease-in-out forwards;
+      }
+
+      > :nth-child(3) {
+        animation: 0.9s fall-in-large ease-in-out forwards;
+      }
+    }
+
     .hobby-icon {
       border-radius: 100%;
       display: inline-block;
@@ -169,6 +201,7 @@ $hobby-bracket: 150px;
       border: 2px dashed $dark;
       cursor: default;
       margin: 4px;
+      opacity: 0;
 
       i {
         position: absolute;
@@ -349,5 +382,31 @@ $hobby-bracket: 150px;
 
   .hobbies-row {
     max-width: 300px;
+  }
+}
+
+@keyframes fall-in {
+  0% {
+    top: -450px
+  }
+  33% {
+    opacity: 1;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes fall-in-large {
+  0% {
+    top: -650px
+  }
+  33% {
+    opacity: 1;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
   }
 }
