--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -46,7 +46,7 @@ html
                             div(class="hobbies-tag")
                                 h2 Interests & hobbies
                             div(class="hobbies-outer")
-                                div(class="hobbies")
+                                div(class="hobbies intro-animation")
                                     div(class="hobbies-row")
                                         div(class="hobby-icon")
                                             i(class="fas fa-rocket")
@@ -61,7 +61,6 @@ html
                                             i(class="fas fa-paw")
                                             span animals
                                     div(class="hobbies-row")
-                                        // Filler divs to force color scheme.
                                         div(class="hobby-icon")
                                             i(class="fas fa-plane")
                                             span travelling
@@ -80,8 +79,12 @@ html
                         h1 education
                     div(class="shadow")
                 div(class="section-body")
-                    div(class="content")
+                    div(class="content loading intro-animation")
                         div(class="main-timeline")
+                    div(class="content-loader")
+                        div
+                        div
+                        div
                     div(class="shadow")
 
             //---- Experience section
@@ -91,8 +94,12 @@ html
                         h1 experiences
                     div(class="shadow")
                 div(class="section-body")
-                    div(class="content")
+                    div(class="content loading intro-animation")
                         div(class="main-timeline")
+                    div(class="content-loader")
+                        div
+                        div
+                        div
                     div(class="shadow")
 
             //---- Abilities section
@@ -102,8 +109,12 @@ html
                         h1 abilities
                     div(class="shadow")
                 div(class="section-body")
-                    div(class="content")
+                    div(class="content loading intro-animation")
                         div(class="inner-content")
+                    div(class="content-loader")
+                        div
+                        div
+                        div
                     div(class="shadow")
 
             //---- Projects preview section
@@ -113,8 +124,12 @@ html
                         h1 projects
                     div(class="shadow")
                 div(class="section-body")
-                    div(class="content")
+                    div(class="content loading intro-animation")
                         div(class="project-gallery")
+                    div(class="content-loader")
+                        div
+                        div
+                        div
                     div(class="shadow")
 
             section(id="contact" class="central-section section-theme-3")
