--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -1,4 +1,4 @@
-@import "imports/defaults", "imports/responsive", "imports/timeline", "imports/form", "imports/theme";
+@import "imports/defaults", "imports/responsive", "imports/loading", "imports/timeline", "imports/form", "imports/theme";
 
 #education .main-timeline .content, #experiences .main-timeline .content {
   h3 {
@@ -145,6 +145,7 @@ $hobby-bracket: 150px;
     font-size: $hobby-bracket;
     line-height: $hobby-bracket;
     height: $hobby-bracket;
+    transition: 1s all;
   }
 
   &::after {
@@ -157,38 +158,6 @@ $hobby-bracket: 150px;
   .hobbies-row {
     text-align: center;
     padding: 0 75px;
-
-    &:nth-child(1) {
-      > :nth-child(1) {
-        animation: 0.8s fall-in ease-in-out forwards;
-      }
-
-      > :nth-child(2) {
-        animation: 0.8s fall-in 0.2s ease-in-out forwards;
-      }
-
-      > :nth-child(3) {
-        animation: 0.9s fall-in-large ease-in-out forwards;
-      }
-
-      > :nth-child(4) {
-        animation: 0.8s fall-in 0.1s ease-in-out forwards;
-      }
-    }
-
-    &:nth-child(2) {
-      > :nth-child(1) {
-        animation: 0.9s fall-in-large 0.1s ease-in-out forwards;
-      }
-
-      > :nth-child(2) {
-        animation: 0.7s fall-in 0.25s ease-in-out forwards;
-      }
-
-      > :nth-child(3) {
-        animation: 0.9s fall-in-large ease-in-out forwards;
-      }
-    }
 
     .hobby-icon {
       border-radius: 100%;
@@ -243,23 +212,23 @@ $hobby-bracket: 150px;
         span {
           @include apply-transform(scale(0.9));
         }
-
-        &:nth-child(4n + 1) {
-          background-color: $color-1;
-        }
-
-        &:nth-child(4n + 2) {
-          background-color: $color-2;
-        }
-
-        &:nth-child(4n + 3) {
-          background-color: $color-3;
-        }
-
-        &:nth-child(4n + 4) {
-          background-color: $color-4;
-        }
       }
+    }
+
+    &:nth-child(1) .hobby-icon:nth-child(4n + 1):hover, &:nth-child(2) .hobby-icon:nth-child(4n + 3):hover {
+      background-color: $color-1;
+    }
+
+    &:nth-child(1) .hobby-icon:nth-child(4n + 2):hover, &:nth-child(2) .hobby-icon:nth-child(4n + 4):hover {
+      background-color: $color-2;
+    }
+
+    &:nth-child(1) .hobby-icon:nth-child(4n + 3):hover, &:nth-child(2) .hobby-icon:nth-child(4n + 1):hover {
+      background-color: $color-3;
+    }
+
+    &:nth-child(1) .hobby-icon:nth-child(4n + 4):hover, &:nth-child(2) .hobby-icon:nth-child(4n + 2):hover {
+      background-color: $color-4;
     }
   }
 }
@@ -382,6 +351,61 @@ $hobby-bracket: 150px;
 
   .hobbies-row {
     max-width: 300px;
+  }
+}
+
+/******
+--- ANIMATIONS
+*******/
+
+.hobbies.intro-animation {
+  &::after, &::before {
+    transform: scale(0);
+  }
+}
+
+section:nth-child(2n + 1) .section-body > .content.intro-animation {
+  left: -110%;
+  opacity: 0;
+}
+
+section:nth-child(2n + 2) .section-body > .content.intro-animation {
+  left: 110%;
+  opacity: 0;
+}
+
+// OLD ANIMATION
+.hobbies:not(.intro-animation) .hobbies-row {
+  &:nth-child(1) {
+    > :nth-child(1) {
+      animation: 0.8s fall-in ease-in-out forwards;
+    }
+
+    > :nth-child(2) {
+      animation: 0.8s fall-in 0.2s ease-in-out forwards;
+    }
+
+    > :nth-child(3) {
+      animation: 0.9s fall-in-large ease-in-out forwards;
+    }
+
+    > :nth-child(4) {
+      animation: 0.8s fall-in 0.1s ease-in-out forwards;
+    }
+  }
+
+  &:nth-child(2) {
+    > :nth-child(1) {
+      animation: 0.9s fall-in-large 0.1s ease-in-out forwards;
+    }
+
+    > :nth-child(2) {
+      animation: 0.7s fall-in 0.25s ease-in-out forwards;
+    }
+
+    > :nth-child(3) {
+      animation: 0.9s fall-in-large ease-in-out forwards;
+    }
   }
 }
 
