improves font awesome loading

--- a/website/views/project.pug
+++ b/website/views/project.pug
@@ -5,9 +5,7 @@ html
         link(href="https://fonts.googleapis.com/css?family=Maven+Pro&display=swap" rel="stylesheet")
         script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js")
         script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js")
-        link(href="../fontawesome/css/fontawesome.css" rel="stylesheet")
-        link(href="../fontawesome/css/brands.css" rel="stylesheet")
-        link(href="../fontawesome/css/solid.css" rel="stylesheet")
+        script(src="https://kit.fontawesome.com/62bb281db1.js")
         link(rel="stylesheet", type="text/css", href="/css/index.css")
         link(rel="stylesheet", type="text/css", href="/css/pageProject.css")
     body
