--- a/website/views/includes/navigation.pug
+++ b/website/views/includes/navigation.pug
@@ -1,9 +1,9 @@
 header
     nav
         div(class="nav-inner")
-            a(id="nav-profile" class="nav-button" href="/#profile")
+            a(id="nav-profile" class="nav-button activated" href="/#profile")
                 i(class="fas fa-user-alt")
-                span contact
+                span profile
             a(id="nav-education" class="nav-button" href="/#education")
                 i(class="fas fa-graduation-cap")
                 span education
@@ -19,3 +19,4 @@ header
             a(id="nav-contact" class="nav-button" href="/#contact")
                 i(class="fas fa-envelope-open-text")
                 span contact
+    script(type="text/javascript", src="/js/views/navigation.js")
