--- a/website/scss/imports/variables.scss
+++ b/website/scss/imports/variables.scss
@@ -3,9 +3,13 @@ $section-body: #f2f2f3;
 $section-body-accent: #e9e9ea;
 $background-color: #d8cdbb;
 $header-background: #0000001a;
-
-$color-1: #6ca338;
-$color-2: #f3585b;
-$color-3: #f0ca45;
-$color-4: #4ca5d0;
 $dark: #272425;
+
+$color-1: #46b2bc;
+$color-1-light: #65c7d0;
+$color-2: #EA3C14;
+$color-2-light: #EF5720;
+$color-3: #6CAF29;
+$color-3-light: #8CC63E;
+$color-4: #F99324;
+$color-4-light: #FBB03B;
