--- a/website/views/includes/navigation.pug
+++ b/website/views/includes/navigation.pug
@@ -1,22 +1,25 @@
 header
     nav
         div(class="nav-inner")
-            a(id="nav-profile" class="nav-button activated" href="/#profile")
+            a(id="nav-profile" class="nav-button color-2 activated" href="/#profile")
                 i(class="fas fa-user-alt")
                 span profile
-            a(id="nav-education" class="nav-button" href="/#education")
+            a(id="nav-education" class="nav-button color-3" href="/#education")
                 i(class="fas fa-graduation-cap")
                 span education
-            a(id="nav-experiences" class="nav-button" href="/#experiences")
+            a(id="nav-experiences" class="nav-button color-4" href="/#experiences")
                 i(class="fas fa-briefcase")
                 span experiences
-            a(id="nav-abilities" class="nav-button" href="/#abilities")
+            a(id="nav-abilities" class="nav-button color-1" href="/#abilities")
                 i(class="fas fa-dumbbell")
                 span abilities
-            a(id="nav-projects" class="nav-button" href="/#projects")
+            a(id="nav-projects" class="nav-button color-2" href="/#projects")
                 i(class="fas fa-hammer")
                 span projects
-            a(id="nav-contact" class="nav-button" href="/#contact")
+            a(id="nav-achievements" class="nav-button color-3" href="/#achievements")
+                i(class="fas fa-trophy")
+                span achievements
+            a(id="nav-contact" class="nav-button color-2" href="/#contact")
                 i(class="fas fa-envelope-open-text")
                 span contact
     script(type="text/javascript", src="/js/views/navigation.js")
