--- a/website/scss/imports/timeline.scss
+++ b/website/scss/imports/timeline.scss
@@ -13,9 +13,9 @@ $border-radius-small: 50px;
   content: "";
   height: 40px;
   width: 40px;
-  background-color: #e7e7e7;
+  background-color: $section-body-accent;
   border-radius: 50%;
-  border: 10px solid #303334;
+  border: 6px solid $dark;
   transform: translateX(-50%);
   position: absolute;
   left: 50%;
@@ -42,7 +42,7 @@ $border-radius-small: 50px;
   height: 100%;
   width: 50%;
   border-radius: $border-radius-large 0 0 $border-radius-large;
-  border: 16px solid #46b2bc;
+  border: 16px solid;
   border-right: none;
   position: absolute;
   box-sizing: border-box;
@@ -54,7 +54,6 @@ $border-radius-small: 50px;
 .main-timeline .timeline::after {
   height: calc(100% - 30px);
   width: calc(50% - 12px);
-  border-color: #65c7d0;
   left: 12px;
   top: 15px;
 }
@@ -80,7 +79,6 @@ $border-radius-small: 50px;
 
 
 .main-timeline .timeline-year {
-  color: #65c7d0;
   font-size: 50px;
   font-weight: 600;
   letter-spacing: -0.04em;
@@ -90,7 +88,6 @@ $border-radius-small: 50px;
 }
 
 .main-timeline .timeline-icon {
-  color: #65c7d0;
   font-size: 70px;
 }
 
@@ -104,7 +101,7 @@ $border-radius-small: 50px;
 }
 
 .main-timeline .title {
-  color: #65c7d0;
+  //color: $color-1-light;
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -119,7 +116,7 @@ $border-radius-small: 50px;
   left: auto;
   right: 0;
   border-radius: 0 $border-radius-large $border-radius-large 0;
-  border: 15px solid red;
+  border: 15px solid;
   border-left: none;
 }
 
@@ -127,7 +124,7 @@ $border-radius-small: 50px;
   left: auto;
   right: 12px;
   border-radius: 0 $border-radius-large $border-radius-large 0;
-  border: 15px solid green;
+  border: 15px solid;
   border-left: none;
 }
 
@@ -139,105 +136,105 @@ $border-radius-small: 50px;
   order: 1;
 }
 
-.main-timeline .timeline:nth-child(5n+1)::before {
-  border-color: #46b2bc;
+.main-timeline .timeline:nth-child(4n+1)::before {
+  border-color: $color-1;
 }
 
-.main-timeline .timeline:nth-child(5n+1)::after {
-  border-color: #65c7d0;
+.main-timeline .timeline:nth-child(4n+1)::after {
+  border-color: $color-1-light;
 }
 
-.main-timeline .timeline:nth-child(5n+1) .timeline-icon {
-  color: #65c7d0;
+.main-timeline .timeline:nth-child(4n+1) .timeline-icon {
+  color: $color-1-light;
 }
 
-.main-timeline .timeline:nth-child(5n+1) .timeline-year {
-  color: #65c7d0;
+.main-timeline .timeline:nth-child(4n+1) .timeline-year {
+  color: $color-1-light;
 }
 
-.main-timeline .timeline:nth-child(5n+1) .title {
-  color: #65c7d0;
+.main-timeline .timeline:nth-child(4n+1) .title {
+  color: $color-1-light;
 }
 
-.main-timeline .timeline:nth-child(5n+2)::before {
-  border-color: #ea3c14;
+.main-timeline .timeline:nth-child(4n+2)::before {
+  border-color: $color-2;
 }
 
-.main-timeline .timeline:nth-child(5n+2)::after {
-  border-color: #EF5720;
+.main-timeline .timeline:nth-child(4n+2)::after {
+  border-color: $color-2-light;
 }
 
-.main-timeline .timeline:nth-child(5n+2) .timeline-icon {
-  color: #EA3C14;
+.main-timeline .timeline:nth-child(4n+2) .timeline-icon {
+  color: $color-2;
 }
 
-.main-timeline .timeline:nth-child(5n+2) .timeline-year {
-  color: #EA3C14;
+.main-timeline .timeline:nth-child(4n+2) .timeline-year {
+  color: $color-2;
 }
 
-.main-timeline .timeline:nth-child(5n+2) .title {
-  color: #EA3C14;
+.main-timeline .timeline:nth-child(4n+2) .title {
+  color: $color-2;
 }
 
-.main-timeline .timeline:nth-child(5n+3)::before {
-  border-color: #8CC63E;
+.main-timeline .timeline:nth-child(4n+3)::before {
+  border-color: $color-3-light;
 }
 
-.main-timeline .timeline:nth-child(5n+3)::after {
-  border-color: #6CAF29;
+.main-timeline .timeline:nth-child(4n+3)::after {
+  border-color: $color-3;
 }
 
-.main-timeline .timeline:nth-child(5n+3) .timeline-icon {
-  color: #8CC63E;
+.main-timeline .timeline:nth-child(4n+3) .timeline-icon {
+  color: $color-3-light;
 }
 
-.main-timeline .timeline:nth-child(5n+3) .timeline-year {
-  color: #8CC63E;
+.main-timeline .timeline:nth-child(4n+3) .timeline-year {
+  color: $color-3-light;
 }
 
-.main-timeline .timeline:nth-child(5n+3) .title {
-  color: #8CC63E;
+.main-timeline .timeline:nth-child(4n+3) .title {
+  color: $color-3-light;
 }
 
-.main-timeline .timeline:nth-child(5n+4)::before {
-  border-color: #F99324;
+.main-timeline .timeline:nth-child(4n+4)::before {
+  border-color: $color-4;
 }
 
-.main-timeline .timeline:nth-child(5n+4)::after {
-  border-color: #FBB03B;
+.main-timeline .timeline:nth-child(4n+4)::after {
+  border-color: $color-4-light;
 }
 
-.main-timeline .timeline:nth-child(5n+4) .timeline-icon {
-  color: #F99324;
+.main-timeline .timeline:nth-child(4n+4) .timeline-icon {
+  color: $color-4;
 }
 
-.main-timeline .timeline:nth-child(5n+4) .timeline-year {
-  color: #F99324;
+.main-timeline .timeline:nth-child(4n+4) .timeline-year {
+  color: $color-4;
 }
 
-.main-timeline .timeline:nth-child(5n+4) .title {
-  color: #F99324;
+.main-timeline .timeline:nth-child(4n+4) .title {
+  color: $color-4;
 }
-
-.main-timeline .timeline:nth-child(5n+5)::before {
-  border-color: #0071BD;
-}
-
-.main-timeline .timeline:nth-child(5n+5)::after {
-  border-color: #0050A3;
-}
-
-.main-timeline .timeline:nth-child(5n+5) .timeline-icon {
-  color: #0071BD;
-}
-
-.main-timeline .timeline:nth-child(5n+5) .timeline-year {
-  color: #0071BD;
-}
-
-.main-timeline .timeline:nth-child(5n+5) .title {
-  color: #0071BD;
-}
+//
+//.main-timeline .timeline:nth-child(4n+5)::before {
+//  border-color: #0071BD;
+//}
+//
+//.main-timeline .timeline:nth-child(4n+5)::after {
+//  border-color: #0050A3;
+//}
+//
+//.main-timeline .timeline:nth-child(4n+5) .timeline-icon {
+//  color: #0071BD;
+//}
+//
+//.main-timeline .timeline:nth-child(4n+5) .timeline-year {
+//  color: #0071BD;
+//}
+//
+//.main-timeline .timeline:nth-child(4n+5) .title {
+//  color: #0071BD;
+//}
 
 @media screen and (max-width: 1200px) {
   .main-timeline {
