--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -12,7 +12,6 @@
 
 
 #profile {
-
   .section-body .content {
     display: flex;
     flex-direction: row;
@@ -79,7 +78,7 @@
         }
 
         #detail-email i {
-          color: $color-3;
+          color: $color-4;
         }
 
         #detail-place i {
@@ -87,7 +86,7 @@
         }
 
         #detail-birthday i {
-          color: $color-4;
+          color: $color-1;
         }
       }
     }
@@ -233,6 +232,147 @@ $hobby-bracket: 150px;
   }
 }
 
+#projects {
+  .cards {
+    max-width: calc(100% - 90px);
+
+    .row {
+      display: flex;
+      justify-content: center;
+    }
+
+    .hidden {
+      position: absolute;
+      visibility: hidden;
+    }
+
+    .card {
+      background-color: white;
+      height: 270px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      border-radius: 6px;
+      text-decoration: none;
+      color: black;
+
+      .image {
+        flex: 1 1 auto;
+        overflow: hidden;
+        position: relative;
+        background-color: $dark;
+        color: white;
+
+        img {
+          transition: min-height 0.3s ease-out, max-height 0.3s ease-out, height 0.3s ease-out,
+          min-width 0.3s ease-out, max-width 0.3s ease-out, width 0.3s ease-out;
+
+          -o-object-fit: cover;
+          object-fit: cover;
+          min-height: 105%;
+          min-width: 105%;
+          width: 100%;
+          margin: auto;
+          display: block;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          @include apply-transform(translate(-50%, -50%))
+        }
+      }
+
+      .text {
+        flex: 0 1 100px;
+        margin-top: -14px;
+        z-index: 1;
+
+        h1 {
+          text-transform: none;
+          font-size: 20px;
+          display: inline-block;
+          margin-bottom: 6px;
+          background-color: $color-1;
+          padding: 2px 10px;
+          border-radius: 4px;
+        }
+
+        $font-size: 16px;
+        $line-height: 1.4;
+        $lines-to-show: 3;
+
+        p {
+          margin: -20px 0 0;
+          padding: 20px 8px 4px;
+          display: -webkit-box;
+          //height: $font-size*$line-height*$lines-to-show;
+          font-size: $font-size;
+          line-height: $line-height;
+          -webkit-line-clamp: $lines-to-show;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+
+      &:hover {
+        cursor: pointer;
+
+        h1 {
+          background-color: $color-1-light;
+        }
+
+        .image img {
+          min-height: 130%;
+          min-width: 130%;
+        }
+      }
+    }
+  }
+
+  .project-on-github {
+    text-align: center;
+    margin: 32px auto 0;
+    max-width: 460px;
+
+    a {
+      padding: 10px 25px;
+      border-radius: 4px;
+      background-color: $color-2;
+      color: $dark;
+      text-decoration: none;
+      font-size: 20px;
+      font-weight: 600;
+
+      &:hover {
+        background-color: $color-2-light;
+      }
+    }
+  }
+}
+
+#achievements {
+  max-width: 768px;
+
+  .timeline-icon i {
+    font-size: 45px;
+  }
+
+  .timeline-year span {
+    font-size: 36px;
+  }
+
+  h3.title {
+    font-weight: 700;
+  }
+}
+
+#contact {
+  .section-body:before {
+    background-color: $color-4-light;
+  }
+}
+
 @media (min-width: 992px) and (max-width: 1200px) {
   .profile-outer {
     flex-basis: 310px !important;
@@ -336,9 +476,6 @@ $hobby-bracket: 150px;
 }
 
 @media (max-width: 450px) {
-  .section-body {
-    padding: 0 !important;
-  }
 
   .profile-outer {
     margin-top: -50px !important;
