--- a/website/views/thanks.pug
+++ b/website/views/thanks.pug
@@ -11,7 +11,7 @@ html
     body
         include includes/navigation
         div(class="content-container")
-            section(id="project" class="central-section")
+            section(id="project")
                 div(class="section-header clip-always-visible has-shadow")
                     div(class="content")
                         h1 Thank you!
