updates scroll handler

--- a/website/scss/imports/responsive.scss
+++ b/website/scss/imports/responsive.scss
@@ -75,7 +75,7 @@
     }
   }
 
-  section.central-section .section-body {
+  section .section-body {
     border-left: 0 !important;
     border-right: 0 !important;
     border-radius: 0 !important;
@@ -94,7 +94,7 @@
   }
 
   .section-body {
-    padding: 50px 0 !important;
+    padding: 50px 10px !important;
   }
   ul.scores li {
     position: relative;
