--- a/website/views/includes/navigation.pug
+++ b/website/views/includes/navigation.pug
@@ -1,7 +1,7 @@
 header
     nav
         div(class="nav-inner")
-            a(id="nav-profile" class="nav-button color-2 activated" href="/#profile")
+            a(id="nav-profile" class="nav-button color-2" href="/#profile")
                 i(class="fas fa-user-alt")
                 span profile
             a(id="nav-education" class="nav-button color-3" href="/#education")
