--- a/website/scss/imports/theme.scss
+++ b/website/scss/imports/theme.scss
@@ -165,6 +165,7 @@ section {
     border-radius: 0 3px 3px 0;
     position: absolute;
     content: '';
+    background-color: $color-2;
     background-image: url(../img/noise.png) $noise-color;
     width: 100%;
     height: 100%;
