--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -397,6 +397,7 @@ $hobby-bracket: 150px;
       margin-top: -80px;
 
       .profile {
+        min-width: 200px;
         position: static;
         display: flex;
         margin-left: 0;
