--- a/website/views/thanks.pug
+++ b/website/views/thanks.pug
@@ -6,6 +6,7 @@ html
         script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js")
         script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js")
         script(src="https://kit.fontawesome.com/62bb281db1.js")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", type="text/css", href="/css/index.css")
         link(rel="stylesheet", type="text/css", href="/css/pageThanks.css")
     body
