adds correct navbar to all pages

--- a/website/scss/pageProject.scss
+++ b/website/scss/pageProject.scss
@@ -1,4 +1,4 @@
-@import "imports/defaults";
+@import "imports/defaults", "imports/responsive", "imports/loading", "imports/theme";
 
 $TAGS_WIDTH: 250px;
 $TAG_BORDER: 2px dashed $dark;
