--- a/website/scss/pageThanks.scss
+++ b/website/scss/pageThanks.scss
@@ -1,4 +1,4 @@
-@import "imports/defaults";
+@import "imports/defaults", "imports/responsive", "imports/loading", "imports/theme";
 
 .section-body {
   max-width: 500px;
