--- a/website/views/thanks.pug
+++ b/website/views/thanks.pug
@@ -1,13 +1,7 @@
 doctype html
 html
     head
-        title #{appName}
-        link(href="https://fonts.googleapis.com/css?family=Maven+Pro&display=swap" rel="stylesheet")
-        script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js")
-        script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js")
-        script(src="https://kit.fontawesome.com/62bb281db1.js")
-        meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", type="text/css", href="/css/index.css")
+        include includes/head
         link(rel="stylesheet", type="text/css", href="/css/pageThanks.css")
     body
         include includes/navigation
@@ -24,3 +18,5 @@ html
                         p Your sincerely, <br> Colin Geukes.
                     div(class="shadow")
         include includes/footer
+        script(type="text/javascript", src="/js/views/thanks/pageHandler.js")
+        script load();
